--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>DASIKO NIG LTD</title>
     <link rel="icon" href="image/DAN-NEW.png" type="fav"/>
