--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     
 
     <title>DASIKO NIG LTD</title>
@@ -11,7 +13,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
     <link rel="icon" href="C:\Users\USER\Desktop\new\image\fav.ico.ico" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap-5.2.3-dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap-grid.min.css" integrity="sha512-JQksK36WdRekVrvdxNyV3B0Q1huqbTkIQNbz1dlcFVgNynEMRl0F8OSqOGdVppLUDIvsOejhr/W5L3G/b3J+8w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/aimate.css">
@@ -19,7 +21,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="bootstrap-5.2.3-dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function(){
               $('.collapse.in').each(function(){
@@ -69,35 +71,35 @@
         <Section class="seaways">
             <div class="row movedd">
 
-                    <div class="col-lg-2 col-md-3 col-sm-12">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         
                         <a href="list/light-truck.html">
                         <img class="tyre-img animate__animated-animate__bounce" src="image\at-1.png" width="195"
                             height="306"></a>
                         <h4><strong>Light Truck</strong></h4>
                     </div>
-                    <div class="col-lg-2 col-md-3 col-sm-12">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         <a href="list/car-size.html">
                         <img class="tyre-img animate__animated-animate__bounce" src="image/zenna-uhp.png" width="195"
                             height="306"></a>
                         <h4><strong>Car</strong></h4>
                     </div>
 
-                    <div class="col-lg-2 col-md-3 col-sm-12 ">
+                    <div class="col-lg-2 col-md-6 col-sm-12 ">
                         <a href="list/comm.html">
                         <img class="tyre-img animate__animated-animate__bounce" src="image/GLADIATORALLSTEEL.png"
                             width="195" height="306"></a>
                         <h4><strong>Commercial</strong></h4>
                     </div>
 
-                    <div class="col-lg-2 col-md-3 col-sm-12 ">
+                    <div class="col-lg-2 col-md-6 col-sm-12 ">
                         <a href="list/trailer.html">
                         <img class="tyre-img animate__animated-animate__bounce" src="image\qr90ped-2.png" width="195"
                             height="306"></a>
                         <h4><strong>Trailer</strong></h4>
                     </div>
 
-                    <div class="col-lg-2 col-md-3 col-sm-12 ">
+                    <div class="col-lg-2 col-md-6 col-sm-12 ">
                         <a href="list/atu.html">
                         <img class="tyre-img animate__animated-animate__bounce" src="image\atr.png" width="195"
                             height="306"></a>
