--- a/list/car-size.html
+++ b/list/car-size.html
@@ -4,28 +4,25 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <title>DASIKO NIG LTD</title>
-    <link rel="icon" href="../image/DAN-NEW.png" type="fav"/>
     <link rel="stylesheet" href="css/style.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
-    <link rel="icon" href="C:\Users\USER\Desktop\new\image\fav.ico.ico" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap-grid.min.css" integrity="sha512-JQksK36WdRekVrvdxNyV3B0Q1huqbTkIQNbz1dlcFVgNynEMRl0F8OSqOGdVppLUDIvsOejhr/W5L3G/b3J+8w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/aimate.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap-5.2.3-dist/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-grid.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    
-    
+    <script src="bootstrap-5.2.3-dist/js/bootstrap.min.js" crossorigin="anonymous"></script> 
+
 <style>
     .top-tan{
     max-width: 100%;
-    height: auto;
+    height: 700px;
     background-image: url('../image/2019-Lexus-GS.jpg') ;
     background-repeat: no-repeat;
     background-attachment: local;
@@ -44,8 +41,14 @@ h1 {
   }
 .large{
     text-align: right;
-    padding-top: 280px;
+    padding-top: 360px;
     padding-right: 30px;
+}
+@media (max-width: 795px) {
+    .large{
+        padding-top: 0;
+        padding-right: 0;
+    }
 }  
 .column-1{
     float: left;
@@ -156,7 +159,7 @@ h1 {
 </style>
 
 <div class="logo">
-    <a href="index.html">
+    <a href="../index.html">
         <img src="../image/DAN-NEW.png" height="30" width="70">
     </a>
 </div>
@@ -167,7 +170,7 @@ h1 {
     <div class="top-tan">
                     <div class="middle-c">
                                 <div class="jeep-banner">
-                                    <div class="jeep-write-up">
+                                    <div class="jeep-write-up container">
                                         <h1 class="dasiko-ng">
                                             <strong>DASIKO NIG LTD</strong>
                                         </h1>
@@ -188,7 +191,7 @@ h1 {
             <a href="list/car-size.html">
             <img class="tyre-img animate__animated-animate__bounce" src="../image/zenna-uhp.png" width="195"
                 height="306"></a>
-            <h4><strong>Car</strong></h4>
+            <h3><strong>Car</strong></h3>
         </div>
 
 
@@ -446,7 +449,7 @@ h1 {
         <div class="contact-me">
             <h2><strong>Get In Touch</strong></h2>
             <p class="contact-message"><strong>GOOD TYRE MAKES DRIVERS MORE CONFIDENCE. <br>Do You Have Any Compain About Your Tyre!</strong></p>
-            <a class="btn" href="https://wa.me/08127060581"><strong>CONTACT ME</strong></a>
+            <a class="btn" href="https://wa.me/08034107400"><strong>CONTACT ME</strong></a>
             </Get>
         </div>
         <hr>
@@ -458,7 +461,7 @@ h1 {
     <div class="bottom-container">
         <a class="footer-link" href="https://www.instagram.com/silent_prado/">
             <img src="../image/icons8-instagram-48.png" alt="Instagram"></a>
-        <a class="footer-link" href="https://wa.me/08127060581">
+        <a class="footer-link" href="https://wa.me/08034107400">
             <img src="../image/icons8-whatsapp-48.png" alt="Whatsapp"></a>
         <a class="footer-link" href="https://www.facebook.com/DANDASIKO?mibextid=ZbWKwL">
             <img src="../image/icons8-facebook-48.png" alt="Facebook"></a>
@@ -476,7 +479,7 @@ h1 {
             </ul></div>
         </div></div>
 
-    <a href="https://wa.me/08127060581">
+    <a href="https://wa.me/08034107400">
         <img class="floating-ggg" src="../image/icons8-whatsapp-48.png" alt="whatsapp">
     </a>
 </div>
