--- a/list/atu.html
+++ b/list/atu.html
@@ -9,6 +9,7 @@
    
 
     <title>DASIKO NIG LTD</title>
+    <link rel="icon" href="../image/DAN-NEW.png" type="fav" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="css/aimate.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
