--- a/Sizes.html
+++ b/Sizes.html
@@ -99,9 +99,15 @@
                             <h2>We deal on all Kinds Car sizes</h2>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 text-column">
-                        <div class="text">
-                            <p>Paint Chemicals: Natrosol, Calcium carbonate, Calgon, Titanium Dioxide, Texanol, Pva, DOP, Acrylic, We have many other paint chemicals that may not be listed here, you can call 08066009956 for more details. We also have a production center where you produce your paint as producer.</p>
+                    <div class="col-lg-5 col-md-12 col-sm-12 image-column butt">
+                        <div id="image_block_two">
+                            <div class="image-box">
+                                <div class="content-box">
+                                    <i class="fas fa-headphones-alt"></i>
+                                    <h4>Save Money, Save Time!</h4>
+                                    <h5>Any questions? Call <a href="tel:+2348034107400">0803 4107 400</a></h5>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -111,7 +117,7 @@
                     <div class="service-block-three">
                         <div class="inner-box">
                             <figure class="image-box">
-                                <img src="assets/images/chemicals/natrasol.jpg" alt="">
+                                <img src="" alt="">
                             </figure>
                             <div class="lower-content text-center">
                                 <h3>10-20 RIM</h3>
@@ -124,7 +130,7 @@
                     <div class="service-block-three">
                         <div class="inner-box">
                             <figure class="image-box">
-                                <img src="assets/images/chemicals/bercmoll.jpg" alt="">
+                                <img src="" alt="">
                             </figure>
                             <div class="lower-content text-center">
                                 <h3>20-30 RIM</h3>
@@ -137,7 +143,7 @@
                     <div class="service-block-three">
                         <div class="inner-box">
                             <figure class="image-box">
-                                <img src="assets/images/chemicals/cellulose.jpg" alt="">
+                                <img src="" alt="">
                             </figure>
                             <div class="lower-content text-center">
                                 <h3>30-40 RIM</h3>
@@ -150,7 +156,7 @@
                     <div class="service-block-three">
                         <div class="inner-box">
                             <figure class="image-box">
-                                <img src="assets/images/chemicals/bucket.jpg" alt="">
+                                <img src="" alt="">
                             </figure>
                             <div class="lower-content text-center">
                                 <h3>40-50 RIM</h3>
@@ -163,7 +169,7 @@
                     <div class="service-block-three">
                         <div class="inner-box">
                             <figure class="image-box">
-                                <img src="assets/images/chemicals/images-10.jpg" alt="">
+                                <img src="" alt="">
                             </figure>
                             <div class="lower-content text-center">
                                 <h3>50-60 RIM</h3>
@@ -176,7 +182,7 @@
                     <div class="service-block-three">
                         <div class="inner-box">
                             <figure class="image-box">
-                                <img src="assets/images/chemicals/images-11.jpg" alt="">
+                                <img src="" alt="">
                             </figure>
                             <div class="lower-content text-center">
                                 <h3>60 & above RIM</h3>
@@ -230,7 +236,7 @@
 <!-- main-js -->
 <script src="assets/js/script.js"></script>
 
-<a href="https://wa.me/08034107400">
+<a href="https://wa.me/+2348034107400">
     <img class="floating-ggg" src="assets/images/icons/WHATSAPP.png" alt="whatsapp">
 </a>
 <br>
