--- a/trailersizes.html
+++ b/trailersizes.html
@@ -91,14 +91,47 @@
     <!-- service-style-three -->
  <section class="service-style-three service-page-2">
     <div class="auto-container">
-        <div class="col-lg-5 col-md-12 col-sm-12 image-column">
-            <div id="image_block_two">
-                <div class="image-box">
-                    <figure class="image"><img src="assets/images/resource/about-2.jpg" alt=""></figure>
-                    <div class="content-box">
-                        <i class="fas fa-headphones-alt"></i>
-                        <h4>Save Money, Save Time!</h4>
-                        <h5>Any questions? Call <a href="tel:08034107400">0803 4107 400</a></h5>
+        <div class="title-box">
+            <div class="row clearfix">
+                <div class="col-lg-6 col-md-12 col-sm-12 title-column">
+                    <div class="sec-title right">
+                        <h5>Quality tires</h5>
+                        <h2>We deal on all Kinds trailer sizes</h2>
+                    </div>
+                    <form>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Full name</label>
+                          <input type="Full name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Full name">
+                          <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">Contact</label>
+                          <input type="Contact" class="form-control" id="exampleInputPassword1" placeholder="Contact">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Tire size</label>
+                            <input type="Tire size" class="form-control" id="exampleInputPassword1" placeholder="Enter Tire size">
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleInputPassword1">How many pieces</label>
+                            <input type="How many" class="form-control" id="exampleInputPassword1" placeholder="How many">
+                          </div>
+                        <div class="form-group form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                </div>
+                <div class="col-lg-5 col-md-12 col-sm-12 image-column butt">
+                    <div id="image_block_two">
+                        <div class="image-box">
+                            <div class="content-box">
+                                <i class="fas fa-headphones-alt"></i>
+                                <h4>Save Money, Save Time!</h4>
+                                <h5>Any questions? Call <a href="tel:+2348034107400">0803 4107 400</a></h5>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -185,7 +218,7 @@
 <!-- main-js -->
 <script src="assets/js/script.js"></script>
 
-<a href="https://wa.me/08034107400">
+<a href="https://wa.me/+2348034107400">
     <img class="floating-ggg" src="assets/images/icons/WHATSAPP.png" alt="whatsapp">
 </a>
 <br>
